2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Little change in
	  parser service - it logs now an error instead of generating an
	  exception, when a project database isn't found.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Ignore empty comment
	  tags. Fixes bug #82703.

2007-09-06  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Add UsePartialTypes setting to
	  DotNetProject.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/CombineEntry.cs, MonoDevelop.Projects/Combine.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Ambience/IAmbience.cs,
	  MonoDevelop.Projects.Ambience/AmbienceService.cs,
	  MonoDevelop.Projects.Ambience/CodeDOMGeneratorUtility.cs,
	  MonoDevelop.Projects.Ambience/NetAmbience.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Fix some compile
	  warnings.

2007-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs, MonoDevelop.Projects/Project.cs:
	  Handle mdb files in DotNetProject.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/ConfigurationCollection.cs,
	  MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/CombineEntry.cs,
	  MonoDevelop.Projects/MonoDevelopFileFormat.cs,
	  MonoDevelop.Projects/Combine.cs, MonoDevelop.Projects/PrjxFileFormat.cs,
	  MonoDevelop.Projects/CombineConfiguration.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Ambience/IAmbience.cs,
	  MonoDevelop.Projects.Ambience/AmbienceService.cs,
	  MonoDevelop.Projects.Ambience/CodeDOMGeneratorUtility.cs,
	  MonoDevelop.Projects.Ambience/NetAmbience.cs,
	  MonoDevelop.Projects.Utility/Comparers.cs,
	  MonoDevelop.Projects.Text/TextEncoding.cs,